--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"@storybook/addon-vitest": "^9.1.3",
 		"@storybook/sveltekit": "^9.1.3",
 		"@sveltejs/adapter-vercel": "^5.6.3",
-		"@sveltejs/kit": "^2.22.0",
+		"@sveltejs/kit": "^2.37.1",
 		"@sveltejs/vite-plugin-svelte": "^6.0.0",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
@@ -71,10 +71,12 @@
 		"@oneidentity/zstd-js": "^1.0.3",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"bgutils-js": "^3.2.0",
 		"drizzle-orm": "^0.40.0",
+		"googlevideo": "^4.0.3",
 		"lucide-svelte": "^0.542.0",
 		"postgres": "^3.4.5",
-		"shaka-player": "^4.16.0",
+		"shaka-player": "^4.16.1",
 		"svelte-youtube-embed": "^0.4.4",
 		"youtubei.js": "^15.0.1"
 	}
